VA-17807: Fix vertical misalignment on facility locator selectors

--- a/src/applications/facility-locator/sass/facility-locator.scss
+++ b/src/applications/facility-locator/sass/facility-locator.scss
@@ -275,7 +275,7 @@ $facility-locator-shadow: rgba(0, 0, 0, 0.5);
       }
 
       .service-type-dropdown-container {
-        align-content: end;
+        align-self: end;
       }
 
       input[type="submit"] {
